--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
+    "@prisma/client": "latest",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.4",
     "@radix-ui/react-aspect-ratio": "^1.1.1",
@@ -38,15 +39,22 @@
     "@radix-ui/react-toggle-group": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
     "autoprefixer": "^10.4.20",
+    "child_process": "latest",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
+    "fs": "latest",
+    "http": "latest",
     "input-otp": "1.4.1",
+    "jose": "^6.0.10",
     "lucide-react": "^0.454.0",
+    "net": "latest",
     "next": "15.2.4",
     "next-themes": "^0.4.4",
+    "path": "latest",
+    "prisma": "latest",
     "react": "^19",
     "react-day-picker": "8.10.1",
     "react-dom": "^19",
@@ -56,17 +64,10 @@
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
-    "vaul": "^0.9.6",
-    "zod": "^3.24.1",
-    "prisma": "latest",
-    "@prisma/client": "latest",
-    "fs": "latest",
-    "path": "latest",
-    "child_process": "latest",
+    "url": "latest",
     "util": "latest",
-    "net": "latest",
-    "http": "latest",
-    "url": "latest"
+    "vaul": "^0.9.6",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@types/node": "^22",
