--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,17 +9,10 @@ services:
       - "3000:3000"
       - "8080:8080"
     environment:
-      - DATABASE_URL=file:/app/prisma/dev.db
       - TCP_SERVER_PORT=8080
+      - JWT_SECRET=${JWT_SECRET}
     volumes:
-      - sqlite-data:/app/prisma
-      - received-frames:/app/received_frames
-      - videos:/app/public/videos
-      - tracking-data:/app/tracking_data
+      - data:/app/data
 
 volumes:
-  sqlite-data:
-  received-frames:
-  videos:
-  tracking-data:
-
+  data:
