--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,14 +5,11 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    container_name: quest-capture-server  
+    restart: unless-stopped               # Restart policy (always, on-failure, unless-stopped)
     ports:
       - "3000:3000"
       - "8080:8080"
-    environment:
-      - TCP_SERVER_PORT=8080
-      - JWT_SECRET=${JWT_SECRET}
+      - "8081:8081"
     volumes:
-      - data:/app/data
-
-volumes:
-  data:
+      - ./data:/app/data
