--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,6 @@ services:
       - "8080:8080"
       - "8081:8081"
     volumes:
-      - ./data:/app/data
+            - ./data:/app/data:Z
     environment:
       - ABSOLUTE_DATA_PATH=/app/data
